# ai-coding-workflows

./: README.md  README_ghcopilot.md  pyproject.toml
.copilot/: README.md
.github/: .mergify.yml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  SECURITY.md  SUPPORT.md  auto_assign.yml  lock.yml  release-drafter.yml  renovate.json  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: default.md
.github/copilot/: instructions.md
.github/copilot/commands/: risk_review.md
.github/copilot/context/: repo.md  security.md
.github/copilot/extensions/: refactor.md
.github/copilot/mcp/: servers.yaml
.github/copilot/modes/: coder.yaml  reviewer.yaml
.github/copilot/prompt-files/: pr_risk_review.json
.github/copilot/runtime/: reviewer.md
.github/copilot/toolsets/: default.yaml
.github/workflow-templates/: python-ci.yml
.github/workflows/: ai-standards-validate.yml  build.yml  deploy.yml  lint.yml  release.yml  security-scan.yml  test.yml
ai_coding_workflows.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
ai_workflows/: __init__.py  cli.py  generator.py  git_ai.py
schemas/: instructions.schema.json  mcp.schema.yaml  mode.schema.json  prompt-file.schema.json  toolset.schema.yaml
scripts/: generate_instructions.py  validate.py
tests/: test_generator.py
